# redhdl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
hdl_examples/: adder_chain.sv  adder_chain.vhdl  adder_stub.sv  blah.vhdl  shifter.sv  shifter.vhdl  test.sv  test.vhdl
hdl_examples/simple/: Simple.vhdl  SimpleReduced.vhdl  Simple_Cell.sv  Simple_Row.sv
modules/: Or.sv
redhdl/: ascii_dag.py  assembly.py  blah.py  blocks.py  bussing.py  greedy_assembly.py  instance_template.py  instances.py  local_search.py  naive_bussing.py  netlist.py  netlist_template.py  path_search.py  placement.py  positional_data.py  redstone_bussing.py  redstone_bussing_old.py  region.py  schematic.py  simple_component.py  slice.py  tree_search.py  vhdl_netlist.py
redhdl/assembly/: assembly.py  bussing.py  naive_bussing.py  placement.py  redstone_bussing.py
redhdl/bussing/: errors.py  naive_bussing.py  redstone_bussing.py
redhdl/misc/: bitrange.py  caching.py  slice.py
redhdl/netlist/: instance_template.py  instances.py  netlist.py  netlist_template.py  schematic_instance.py  vhdl_netlist.py
redhdl/parser/: vhdl.py
redhdl/search/: local_search.py  path_search.py
redhdl/vhdl/: analysis.py  antlr_parser.py  conftest.py  display_parse_tree.py  errors.py  models.py  parse_tree.py
redhdl/voxel/: positional_data.py  region.py  schematic.py
schematic_examples/: hdl_adder.schem  hdl_diagonal_not.schem  hdl_xor.schem
schematics/: and_h8b.schem  not_h8b.schem  or.schem
scripts/: compile.py  debug_bussing.py  display_schem.py  sv_to_schem.py  visualize_bussing.py
tests/: test_assembly_heuristics.py  test_path_search.py  test_redstone_bussing.py
