[metadata]
name = redhdl
description = "SystemVerilog to redstone compiler."
long_description = file: README.md
version = 0.1.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
    antlr4-python3-runtime
    graphviz
    grandalf

tests_require =
    pytest-custom_exit_code
    types-frozendict

[options.entry_points]
console_scripts =
    display_vhdl = redhdl.parser.vhdl:display_example_program

[options.extras_require]
dev = black; flake8; isort; mypy; pre-commit; pytest; pytest-cov

[isort]
profile = black
atomic = True
force_sort_within_sections = True
# skip = autogen,vhdlLexer.py,vhdlParser.py,vhdlVisitor.py,vhdlListener.py
multi_line_output = 3

[tool:pytest]
addopts = --doctest-modules  --ignore=redhdl/parser/autogen --ignore=redhdl/parser/vhdlLexer.py --ignore=redhdl/parser/vhdlParser.py --ignore=redhdl/parser/vhdlVisitor.py --ignore=redhdl/parser/vhdlListener.py --ignore=trash
doctest_optionflags=ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning

[flake8]
ignore = E203, E266, E501, W503, F841
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude =
    ascii_dag.py,
    vhdlParser.py,
    vhdlLexer.py,
    vhdlParserVisitor.py,
    vhdlParserListener.py

[mypy]
files = redhdl
ignore_missing_imports = true
exclude = autogen,vhdlLexer.py,vhdlParser.py,vhdlVisitor.py,vhdlListener.py
