[metadata]
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules  --ignore=redhdl/vhdl/autogen --ignore=redhdl/vhdl/vhdlLexer.py --ignore=redhdl/vhdl/vhdlParser.py --ignore=redhdl/vhdl/vhdlVisitor.py --ignore=redhdl/vhdl/vhdlListener.py --ignore=trash
doctest_optionflags=ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning

[mypy]
files = redhdl
ignore_missing_imports = true
exclude = autogen,vhdlLexer.py,vhdlParser.py,vhdlVisitor.py,vhdlListener.py
